/* 
  Localizeable.strings
  ShoppingBuddy

  Created by Peter Sypek on 22.07.17.
  Copyright © 2017 Peter Sypek. All rights reserved.
*/
    // App Store text
Subtitle = "Your shopping friend";

    //Validation Service Alert
ValidationAlert_Title = "Validation Error";
    //Password
ValidationPasswordEmptyAlert_Message = "The password should not be empty!";
ValidationPasswordCharactersCountBelowSixAlert_Message = "The password should be at least six characters!";
    //Nickname
ValidationNicknameEmptyAlert_Message = "The nickname should not be empty!";
ValidationNicknameShouldContainAtLeastSixCharacters = "Your nickname should be at least six characters!";
    //Email
ValidationEmailEmptyAlert_Message = "Your email address should not be empty!";
ValidationEmailShouldContainAtSign = "Yor email should contain an @-sign!";
ValidationEmailShouldContainDot = "Yor email should contain a '.'!";
ValidationEmailContainsSpaces = "Empty spaces are not allowed in your email!";
ValidationEmailEndingInvalid = "Invalid email. The email should end with '.com, .de' or similar!";
ValidationEmailContainsInvalidCharacters = "The email contains invalid characters!";
    //Textfield
ValidationTextFieldEmptyAlert_Message = "Textfields are not allowed to be empty!";
ValidationTextFieldBelowTwoCharachtersAlert_Message = "Die Eingabe im Textfeld muss mindestens zwei Zeichen betragen!";

    //LoginController
LogInSegmentedControll_SegmentOne = "Login";
LogInSegmentedControll_SegmentTwo = "Sign up";
txt_Nickname_Placeholder = "nickname";
txt_Email_Placeholder = "email";
txt_Password_Placeholer = "password";
LoginResetPassword = "Reset password?";

    //DahboardController
DashboardControllerTitle = "Dashboard";
lbl_ObeservedStoresText = "Observed stores:";
lbl_ObservedListsText = "Observed lists:";
lbl_YourListsText = "Your lists:";
lbl_PinnedAddress = "Pinned address:";

    //SettingsController
SettingsControllerTitle = "Settings";
txt_AddStore_Placeholder = "store name";

    //ShoppingListController
ShoppingListControllerTitle = "Shopping Lists";
txt_AddArticle_PlaceHolder = "enter new article";

    //Add Shopping  List PopUp
lbl_AddListPopUpTitle = "Add New List";
txt_RelatedStore_Placeholder = "related store";
txt_ListName_Placeholder = "list name";
    //Add Item PopUp
lbl_AddItemPopUpTitle = "Add List Item";
txt_ItemName_Placeholer = "item name";
CustomAddShoppingListRefreshControlImage = "AddShoppingListRefreshControl-US";

    //LocationService
GPSAuthorizationRequestDenied_AlertTitle = "GPS Comment";
GPSAuthorizationRequestDenied_AlertMessage = "Without GPS authorization location services are disabled. You will not get informed about nearby stores of your active shopping lists.";
GPSAuthorizationRequestDenied_AlertActionSettingsTitle = "Settings";
GPSAuthorizationRequestDenied_AlertActionSettingsNoTitle = "No Thanks";
LocationManagerEnteredRegion_AlertTitle = "%@ Nearby";
LocationManagerEnteredRegion_AlertMessage = "You got open articles for '%@' on your shopping lists.";


    //Shopping Cards
lbl_ShoppingCardTotalItems_Label = "Total items:";
lbl_ShoppingCardOpenItems_Label = "Open items:";

    //ShareListPopUp
lbl_ShareListTitle = "Share list with friend";
txt_ShareOpponentEmailPlaceholder = "friends email";

    //Share List Message
UserEmailNotFoundTitle = "User not found!";
UserEmailNotFoundMessage = " could not be found. A user with this e-mail does not exist as Shopping Buddy user.";
ShareListMessage = "%@ want's to share a shopping list with you.";
ShareListTitle = "Invitation from %@";
ShareListAcceptedTitle = "Sharing accepted";
ShareListAcceptedMessage = "%@ accepted your sharing invite.";
NotAllowedToShareListAlertTitle = "Sharing forbidden!";
NotAllowedToShareListAlertMessage = "You are only able to share lists that are created by yourself.";
ListDeleteNotAllowedAlertTitle = "Delete forbidden!";
ListDeleteNotAllowedAlertMessage = "You are only able to delete lists that are created by yourself.";
DeleteMessage = "delete";
lbl_CancelSharing = "Cancel sharing with friend";
ListCurrentlyNotSharedTitle = "Cancel Sharing";
ListCurrentlyNotSharedMessage = "This list is currently not shared. Cancel sharing is not possible!";
CancelSharingSelectedMemberAlertTitle = "Cancel Sharing?";
CancelSharingSelectedMemberAlertMessage = "This action will cancel the sharing of this list with ";
ListOwnerCanceledSharingTitle = "Sharing canceled!";
ListOwnerCanceledSharingMessage = "%@ removed '%@' from group list '%@'!";
SharedUserCanceledSharingTitle = "Sharing canceled!";
SharedUserCanceledSharingMessage = "%@ has left the group list '%@'.";
ListItemAddedTitle = "Article added!";
ListItemAddedMessage = "%@ added '%@' to group list '%@'.";
SharingDeclinedMessageTitle = "Sharing invite declined";
SharingDeclinedMessageMessage = "%@ declined your list sharing invitation.";
LeaveGroupListAlertTitle = "Leave Shared List!";
LeaveGroupListAlertMessage = "Do you want to leave the list '%@'?";
WillGoShoppingMessageTitle = "%@ goes for shopping";
WillGoShoppingMessageMessage = "%@ goes to '%@' for shopping. Last chance to add articles to group list '%@'.";
MesageNotPossibleAlertTitle = "No group members!";
MesageNotPossibleAlertMessage = "There exist no group members. Sending message is not possible.";

    //In App Purchases
PurchaseRestoreAlertTitle = "Purchase Restored";
PurchaseRestoreAlertMessage = "Thank you %@ your purchase is restored.";
PurchaseDeniedAlertTitle = "Purchase Denied";
PurchaseDeniedAlertTitle = "You are not allowed to purchase App Store products!";
FullVersionNeededAlertTitle = "Premium Version Needed";
FullVersionNeededArticleAlertMessage = "You need the premium version if you want to save more than 15 articles.";
FullVersionNeededSharingAlertMessage = "You need the premium version if you want to share lists with more than one person.";
FullVersionNeededListCountAlertMessage = "You need the premium version if you want to save more than one list.";
FullVersionNeededMessagesAlertMessage = "You need the premium version if you want to send messages.";

    //Delete List Message
ShoppingListDeleteAlertTitle = "Delete shopping list?";
ShoppingListDeleteAlertMessage = "This will delete the shopping list and all of its items.";

    //Cancel Sharing List Message
CancelSharingTitle = "Cancel sharing?";
CancelSharingMessage = "After canceling the sharing you won't be able to see your friends list.";

    //Firebase Fetch errors
OnlineFetchRequestError = "Web Request Error";

    //Messages Controller
MessagesControllerTitle = "Messages";
AcceptInvitation = "accept";
DeclineInvitation = "decline";
DeleteMessage = "delete";
AnswerMessage = "answer";

    //Info Views
DashboardOnboardingImage = "OnboardingDashboard-EN";
ShoppingListsOnboardiongImage = "OnboardingShoppinglists-EN";
OnboardingListView = "OnboardingListView-EN";

    //SendMessage PopUp
lbl_SendMessagePopUp = "Send Message";
btn_SendMessagePopUp_HeadingToStoreContent = "I'am heading to store!";
btn_SendMessagePopUp_ListChangedContent = "I changed the list!";
btn_SendMessagePopUp_DidTheShoppingContent = "I did the errands!";
txt_SendMessagePopUp_CustomMessagePalceholder = "enter message";
ChangedTheListMessageTitle = "List changed!";
ChangedTheListMessageMessage = "%@ changed the list '%@'. Take a look.";
CustomMessageTitle = "Message from %@";
ErrandsFinishedAlertTitle = "Errands completed!";
ErrandsFinishedAlertMessage = "%@ did the errands for list '%@'.";

    //Check Monitored Radius
CheckMonitoredRadiusInSettingsAlertTitle = "Geofence Radius!";
CheckMonitoredRadiusInSettingsAlertMessage = "Geofence Radius not set. Activate the 'Geofence Radius' in at the settings menu to start monitoring stores.";

txt_SendAnswerPlaceholder = "send %@ an answer";

msg_ArticleIsOutTitle = "Article sold out!";
lbl_SendMessageHeader = "Quick Message";
quickMessageActionTitle = "%@ is out!";

    //Contacts Access
accessDeniedAlertTitle = "Access to Contacts";
accessDeniedAlertMessage = "Please grant access to contacts in Settings/Privacy/Contacts to allow selection from contacts!";
sendAppStoreLinkToFriendSubject = "Drop Shopper Shopping List Invitation";
sendAppStoreLinkToFriendBody = "%@ want's to share a Drop Shopper shopping list with you. Get Drop shopper at the iOS App Store: %@";

currentLanguage = "EN";
