...
                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                    <subviews>
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hyN-ky-apI">
                                                            <rect key="frame" x="10" y="10" width="30" height="30"/>
                                                            <state key="normal" image="icon-Login"/>
                                                            <userDefinedRuntimeAttributes>
                                                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="btn_login"/>
                                                            </userDefinedRuntimeAttributes>
                                                        </button>
                                                    </subviews>
                                                    <color key="backgroundColor" red="0.99194461107254028" green="0.99615627527236938" blue="0.99600595235824585" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <constraints>
                                                        <constraint firstItem="hyN-ky-apI" firstAttribute="leading" secondItem="BRl-u0-Nvc" secondAttribute="leading" constant="10" id="7EV-Mw-129"/>
...
